--- a/src/public/css/pages/_analyze.scss
+++ b/src/public/css/pages/_analyze.scss
@@ -2,7 +2,7 @@
 .editor {
   display: flex;
   width: 100%;
-  height: 79vh;
+  height: 80vh;
   max-height: 100vh;
 }
 
@@ -11,7 +11,7 @@
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  max-height: 79vh;
+  max-height: 80vh;
   padding-left: 1.875rem;
   overflow-y: auto;
   font-family: $script-font;
@@ -71,7 +71,7 @@
   @include flex-center(space-between);
   @include font-style($weight: 400, $size: 1.25rem);
 
-  padding: 23px 15px 19px;
+  padding: 15px 15px;
   color: $primary-font-color;
   font-style: normal;
   line-height: normal;
