--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 1600px;
+  width: 100%;
   height: 70px;
   background: #fff;
 }
