--- a/src/public/css/components/_navbar.scss
+++ b/src/public/css/components/_navbar.scss
@@ -2,15 +2,15 @@
 #navbar {
   @include flex-center(space-between);
 
-  width: 1600px;
-  height: 70px;
+  padding-right: 0.625rem;
+  height: 4.375rem;
   background: $background-color;
 
   %navbar-item-group {
     @include flex-center;
     @include font-style;
 
-    gap: 20px;
+    gap: 1.25rem;
     color: $primary-font-color;
     font-style: normal;
     line-height: $standard-line-height;
@@ -39,23 +39,23 @@
   .navbar-item-group-right {
     @extend %navbar-item-group;
 
-    gap: 6px;
+    gap: 0.375rem;
   }
 
   #navbar-logo {
     flex-shrink: 0;
-    width: 35px;
-    height: 24px;
-    padding: 28px 23px;
+    width: 2.2rem;
+    height: 1.5rem;
+    padding: 1.75rem 1.5rem;
   }
 
   #navbar-person-icon {
-    width: 20px;
-    height: 20px;
+    width: 1.25rem;
+    height: 1.25rem;
   }
 
   .down-arrow-icon {
-    width: 12px;
-    height: 20px;
+    width: 0.75rem;
+    height: 1.25rem;
   }
 }
