--- a/src/public/css/pages/_analyze.scss
+++ b/src/public/css/pages/_analyze.scss
@@ -10,31 +10,18 @@
   box-sizing: border-box;
   width: 100%;
   height: 100%;
+  padding-top: 0;
   padding-left: 1.875rem;
   overflow-y: auto;
+  font-size: $standard-font-size;
   font-family: $script-font;
+  line-height: 1.5;
   background: linear-gradient(180deg, $primary-background-color 0%, rgb(254 221 225 / 80%) 100%), $primary-background-color;
   border: 0;
   resize: none;
   scroll-behavior: smooth;
 
-  &::-webkit-scrollbar {
-    width: $scrollbar-width;
-  }
-
-  &::-webkit-scrollbar-track {
-    border-radius: $scrollbar-border-radius;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background: $scrollbar-color;
-    border-radius: $scrollbar-border-radius;
-  }
-
-  &::-webkit-scrollbar-thumb:hover,
-  &::-webkit-scrollbar-thumb:active {
-    background-color: $gradient-color-end;
-  }
+  @extend %scrollbar;
 }
 
 #script-textbox {
@@ -59,7 +46,9 @@
   padding: 0 0.4375rem;
   overflow: hidden;
   color: #c2a6c5;
+  font-size: $standard-font-size;
   font-family: $script-font;
+  line-height: 1.5;
   white-space: pre;
   text-align: right;
   background: rgb(194 166 197 / 20%);
@@ -85,13 +74,7 @@
 }
 
 .analyze-header {
-  @include flex-center(space-between);
-  @include font-style($weight: 400, $size: 1.25rem);
+  @extend %header;
 
-  padding: 0.9375rem $content-padding;
-  color: $primary-font-color;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: -0.0375rem;
   border-bottom: 0.0313rem $primary-border-color solid;
 }
