--- a/src/public/css/components/_buttons.scss
+++ b/src/public/css/components/_buttons.scss
@@ -1,7 +1,5 @@
 // Buttons styles
 %shared-button {
-  @include font-style;
-
   justify-content: center;
   color: $button-font-color;
 }
@@ -12,12 +10,12 @@
 
   position: relative;
   z-index: 0;
-  gap: 10px;
-  padding: 9px 19px;
+  gap: $button-gap;
+  padding: $button-padding-y $button-padding-x;
   overflow: hidden;
   text-align: center;
   border-color: transparent;
-  border-radius: 49px;
+  border-radius: $button-border-radius;
 
   &::before {
     position: absolute;
@@ -37,8 +35,8 @@
 .large-button {
   @extend %shared-button;
 
-  height: 50px;
-  margin-top: 20px;
+  height: $button-height;
+  margin-top: $button-margin-top;
   background: linear-gradient(45deg, $gradient-color-start 0.01%, $gradient-color-mid 49.97%, $gradient-color-end 100%);
   box-shadow: $btn-shadow;
 
@@ -50,12 +48,12 @@
 .google-sign-in-btn {
   @extend %shared-button;
 
-  height: 50px;
+  height: $button-height;
   color: $secondary-font-color;
   border: 1px solid $light-outline-color;
 
   img {
-    margin-right: 10px;
+    margin-right: $button-gap;
   }
 
   &:hover {
