--- a/src/public/css/components/_navbar.scss
+++ b/src/public/css/components/_navbar.scss
@@ -2,17 +2,15 @@
 #navbar {
   @include flex-center(space-between);
 
-  padding-right: 0.625rem;
+  padding-right: $content-padding;
   background: $background-color;
 
   %navbar-item-group {
     @include flex-center;
-    @include font-style;
 
     gap: 1.25rem;
     height: $navbar-height;
     color: $primary-font-color;
-    font-style: normal;
     line-height: $standard-line-height;
     letter-spacing: $standard-letter-spacing;
   }
@@ -43,19 +41,16 @@
   }
 
   #navbar-logo {
-    flex-shrink: 0;
-    width: 2.2rem;
-    height: 1.5rem;
+    @include svg-icon(2.2rem, 1.5rem);
+
     padding: 1.75rem 1.5rem;
   }
 
   #navbar-person-icon {
-    width: 1.25rem;
-    height: 1.25rem;
+    @include svg-icon(1.25rem, 1.25rem);
   }
 
   .down-arrow-icon {
-    width: 0.75rem;
-    height: 1.25rem;
+    @include svg-icon(0.75rem, 1.25rem);
   }
 }
