--- a/src/public/css/components/_text.scss
+++ b/src/public/css/components/_text.scss
@@ -1,44 +1,36 @@
 // Text styles
 %header {
-    @include flex-center(space-between);
-    @include font-style($weight: 400, $size: 1.25rem);
-  
-    padding: 0.9375rem $content-padding;
-    color: $primary-font-color;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: -0.0375rem;
-  }
+  @include flex-center(space-between);
+  @include font-style($weight: 400, $size: 1.25rem);
 
-.large-header{
-  @include font-style($size: 2rem, $weight: 300);
- 
+  padding: $header-padding $content-padding;
+  color: $primary-font-color;
+  letter-spacing: -0.0375rem;
+}
+
+.large-header {
+  @include font-style($weight: 300, $size: $header-large-size);
+
   color: $main-font-color;
-  font-style: normal;
-  line-height: normal;
-} 
+}
 
-.large-thin-header{
-  @include font-style($size: 2.5625rem, $weight: 200);
+.large-thin-header {
+  @include font-style($weight: 200, $size: $header-large-thin-size);
 
   color: $background-color;
-  font-style: normal;
-  line-height: normal;
   letter-spacing: -0.077rem;
 }
 
 .small-header {
-  @include font-style($size: 0.9375rem);
+  @include font-style($size: $header-small-size);
 
   color: $main-font-color;
-  line-height: normal;
   text-align: left;
 }
 
 .smaller-header {
-  @include font-style($size: 0.6875rem);
+  @include font-style($size: $header-smaller-size);
 
   color: $secondary-font-color;
-  line-height: normal;
   text-align: left;
 }
