--- a/src/public/css/pages/_analyze.scss
+++ b/src/public/css/pages/_analyze.scss
@@ -6,6 +6,9 @@
 }
 
 .script {
+  @include font-style($family: $script-font);
+  @extend %scrollbar;
+
   flex: 1;
   box-sizing: border-box;
   width: 100%;
@@ -13,15 +16,11 @@
   padding-top: 0;
   padding-left: 1.875rem;
   overflow-y: auto;
-  font-size: $standard-font-size;
-  font-family: $script-font;
   line-height: 1.5;
   background: linear-gradient(180deg, $primary-background-color 0%, rgb(254 221 225 / 80%) 100%), $primary-background-color;
   border: 0;
   resize: none;
   scroll-behavior: smooth;
-
-  @extend %scrollbar;
 }
 
 #script-textbox {
@@ -40,14 +39,14 @@
 }
 
 #line-numbers {
+  @include font-style($family: $script-font);
+
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   padding: 0 0.4375rem;
   overflow: hidden;
   color: #c2a6c5;
-  font-size: $standard-font-size;
-  font-family: $script-font;
   line-height: 1.5;
   white-space: pre;
   text-align: right;
