--- a/src/public/css/pages/_admin.scss
+++ b/src/public/css/pages/_admin.scss
@@ -137,6 +137,7 @@
   padding: $content-outline-padding;
   overflow-y: auto;
   background: $background-color;
+  border: 2px solid transparent;
   border-radius: 0.75rem;
 }
 
@@ -156,32 +157,25 @@
   justify-content: center;
   min-height: 0;
   margin: 0 $content-padding $content-padding $content-padding;
+  padding: 20px;
   overflow-y: auto;
   text-align: center;
   background-color: $primary-background-color;
   border: 2px solid $background-color;
   border-radius: 0.75rem;
-
-  &.hide-content {
-    display: none;
-  }
-}
-
-.hide-content {
-  display: none;
 }
 
 // image
 .image-container {
-  padding-top: 2.5rem;
   position: relative;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   width: 37.5rem;
   height: 25rem;
-  border-radius: 0.75rem;
+  padding-top: 2.5rem;
   overflow: hidden;
+  border-radius: 0.75rem;
 }
 
 #user-id-image {
