--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,28 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Log in</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script src="https://accounts.google.com/gsi/client" async></script>
-</head>
-<body>
-    <div class="login-page-wrapper">
-        <div class="full-container">
-            <div class="half-container">
-                <div class="left-container">
-                    <img class="login-logo" src="img/full_logo.svg">
-                    <div class="welcome-back">Welcome to Relabase!</div>
-                    <div id="google-sign-in-div""></div>
-                </div>
-            </div>
-            <div class="half-container fill"><img src="img/eye_candy.png"></div>
-        </div>
-    </div>
-</body>
-</html>
-
-<script src="js/login-script.js"></script>
-
+<%- include('login-register-layout.ejs', { 
+    title: 'Log in',
+    body: ["partials/auth/login-content.ejs"],
+    scripts: "<script src='js/login-script.js'></script>"
+}) %>
