--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,98 +1,5 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>Register</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script src="https://accounts.google.com/gsi/client" async></script>
-</head>
-
-<body>
-    <div class="login-page-wrapper">
-        <div class="full-container">
-            <div class="half-container">
-                <div class="left-container">
-                    <img class="login-logo" src="img/full_logo.svg">
-                    <div class="register-title-text">Let's get you started!</div>
-                    <div class="register-account-info">
-                        <div class="current-account">You are currently making an account for <span
-                                class="register-google-name">
-                                <%= token.name %>
-                            </span></div>
-                        <div class="not-you">
-                            Not you?
-                            <a class="change-account-link" href="/login">
-                                Register with a different account
-                            </a>
-                        </div>
-                    </div>
-                    <div id="step-01-button" class="step-button large-button-thin cursor-pointer">
-                        Step 01 - Full name and email
-                    </div>
-                    <div id="step-01-content" class="step-content">
-                        <div class="content-more-info">Your full name will be used to identify you on the website.</div>
-                        <div class="input">
-                            <div class="input-before">
-                                <i class="bi-at" style="font-size: 1.5rem;"></i>
-                            </div>
-                            <div class="input-after">
-                                <input id="register-input-first-name" type="email" placeholder="First name" />
-                            </div>
-                        </div>
-                        <div class="input">
-                            <div class="input-before">
-                                <i class="bi-at" style="font-size: 1.5rem;"></i>
-                            </div>
-                            <div class="input-after">
-                                <input id="register-input-last-name" type="email" placeholder="Last name" />
-                            </div>
-                        </div>
-                        <div class="content-more-info">Please use your academic email address for verification purposes.
-                        </div>
-                        <div class="input">
-                            <div class="input-before">
-                                <i class="bi-at" style="font-size: 1.5rem;"></i>
-                            </div>
-                            <div class="input-after">
-                                <input id="register-input-email" type="email" placeholder="Email" />
-                            </div>
-                        </div>
-                    </div>
-                    <div id="step-02-button" class="step-button large-button-thin cursor-pointer">
-                        Step 02 - ID upload for verification
-                    </div>
-                    <div id="step-02-content" class="step-content display-none">
-                        <div class="content-more-info">Your ID will be used to verify your identity.</div>
-                        <div class="input file-dropbox">
-                            <label id="file-upload-label" for="file-upload" class="upload-button">
-                                Select image
-                            </label>
-                            <input type="file" name="file-upload" id="file-upload" class="display-none" accept="image/png, image/jpeg">
-                            <div id="file-name" class="display-none"></div>
-                        </div>
-                    </div>
-                    <div id="step-03-button" class="step-button large-button-thin cursor-pointer">
-                        Step 03 - Reason for account creation
-                    </div>
-                    <div id="step-03-content" class="step-content display-none">
-                        <div class="content-more-info">Please provide a brief explanation of why you'd like access to
-                            the website.</div>
-                        <div class="input">
-                            <textarea id="register-input-reason" rows="4" cols="50"></textarea>
-                        </div>
-                    </div>
-                    <div id="submit-button" class="large-button-thin cursor-pointer">Submit</div>
-                    <div id="register-error-msg" class="error-msg display-none">Please answer all fields.</div>
-                </div>
-            </div>
-            <div class="half-container fill"><img src="img/eye_candy.png"></div>
-        </div>
-    </div>
-</body>
-
-</html>
-
-<script src="js/register-script.js"></script>
+<%- include('login-register-layout.ejs', { 
+    title: 'Register',
+    body: ["partials/auth/register-content.ejs"],
+    scripts: "<script src='js/register-script.js'></script>"
+}) %>
