--- a/src/views/404.ejs
+++ b/src/views/404.ejs
@@ -1,5 +1,5 @@
 <%- include('login-register-layout.ejs', { 
     title: 'Page not found',
-    body: ["partials/auth/404-content.ejs"],
+    body: ["partials/404-content.ejs"],
     scripts: ""
 }) %>
