--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <%- include('partials/navbar.ejs', { page: currentPage , username: currentUser }); %>
+    <%- include('partials/navbar.ejs', { page: currentPage , username: currentUser, isAdmin: isAdmin }); %>
 
     <div class="<%= locals.mainClass ? mainClass : 'main-content' %>">
         <% body.forEach(function(bodyPart) { %>
