--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -6,7 +6,9 @@
     <a class="navbar-link <%= page === 'home' ? 'active' : '' %>" href="home">Home</a>
     <a class="navbar-link <%= page === 'analyze' ? 'active' : '' %>" href="analyze">Analyze</a>
     <a class="navbar-link <%= page === 'history' ? 'active' : '' %>" href="history">History</a>
-    <a class="navbar-link <%= page === 'admin' ? 'active' : '' %>" href="admin">Admin</a>
+    <% if (isAdmin) { %>
+      <a class="navbar-link <%= page === 'admin' ? 'active' : '' %>" href="admin">Admin</a>
+    <% } %>
     <a class="navbar-link <%= page === 'help' ? 'active' : '' %>" href="help">Help</a>
   </div>
   <div class="navbar-item-group-right">
