--- a/src/public/css/pages/_register.scss
+++ b/src/public/css/pages/_register.scss
@@ -1,5 +1,6 @@
 .register-title-text {
     @include font-style($weight: 600, $size: 2.95rem);
+
     margin-bottom: 1.25rem;
 }
 
@@ -31,6 +32,7 @@ a.change-account-link:hover {
 .step-button,
 #submit-button {
     @include flex-center;
+
     width: 100%;
     border-radius: $border-radius;
 }
@@ -47,29 +49,31 @@ a.change-account-link:hover {
 
 #register-input-reason {
     @include font-style($weight: 100, $size: $paragraph-font-size);
-    border: 0px;
-    resize: none;
+
     width: 100%;
-    border-radius: $border-radius;
-    padding: 1rem;
     height: 10rem;
+    padding: 1rem;
+    border: 0;
+    border-radius: $border-radius;
+    resize: none;
 }
 
 .file-dropbox {
+    justify-content: space-evenly;
     height: 10rem;
     @include flex-direction;
-    justify-content: space-evenly;
 }
 
 .content-more-info {
     @include font-style($weight: 100, $size: 0.95rem);
+
     margin-top: $content-padding;
 }
 
 #submit-button {
+    margin-bottom: $content-padding;
     padding: $content-padding 0;
     background: linear-gradient(45deg, $gradient-color-start 0.01%, $gradient-color-mid 49.97%, $gradient-color-end 100%);
-    margin-bottom: $content-padding;
      
     &:hover {
         background: $gradient-color-start;
@@ -82,6 +86,7 @@ a.change-account-link:hover {
 
 .checkbox-confirmation-div {
     @include flex-center;
+
     margin-top: $button-margin-top;
     text-align: justify;
 
