--- a/src/views/partials/auth/register-content.ejs
+++ b/src/views/partials/auth/register-content.ejs
@@ -30,20 +30,20 @@
 <div id="step-02-button" class="step-button large-button-thin">
     Step 02 - ID upload for verification
 </div>
-<div id="step-02-content" class="step-content display-none">
+<div id="step-02-content" class="step-content hide-content">
     <div class="content-more-info">Your ID will be used to verify your identity.</div>
     <div class="input-container file-dropbox">
         <label id="file-upload-label" for="file-upload" class="upload-button">
             Select image
         </label>
-        <input type="file" name="file-upload" id="file-upload" class="display-none" accept="image/png, image/jpeg">
-        <div id="file-name" class="display-none"></div>
+        <input type="file" name="file-upload" id="file-upload" class="hide-content" accept="image/png, image/jpeg">
+        <div id="file-name" class="hide-content"></div>
     </div>
 </div>
 <div id="step-03-button" class="step-button large-button-thin">
     Step 03 - Reason for account creation
 </div>
-<div id="step-03-content" class="step-content display-none">
+<div id="step-03-content" class="step-content hide-content">
     <div class="content-more-info">Please provide a brief explanation of why you'd like access to
         the website.</div>
     <div class="input-container">
@@ -55,4 +55,4 @@
     <label for="checkbox-confirmation">I agree not to engage in any activities that may cause harm, disrupt, or compromise the security and integrity of the website or its users' data.</label>
 </div>
 <div id="submit-button" class="large-button-thin">Submit</div>
-<div id="register-error-msg" class="error-msg display-none">Please answer all fields.</div>
+<div id="register-error-msg" class="error-msg hide-content">Please answer all fields.</div>
