--- a/src/public/css/components/_buttons.scss
+++ b/src/public/css/components/_buttons.scss
@@ -8,30 +8,16 @@
 }
 
 .primary-button {
-  @include flex-center;
   @extend %shared-button;
 
-  position: relative;
-  z-index: 0;
-  gap: $content-padding;
   padding: $button-padding-y $button-padding-x;
   overflow: hidden;
-  text-align: center;
   text-decoration: none;
+  background: linear-gradient(45deg, $gradient-color-start 0.01%, $gradient-color-mid 49.97%, $gradient-color-end 100%);
   border: 0;
-  border-radius: $button-border-radius;
+  border-radius: $border-radius;
 
-  &::before {
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(89deg, $gradient-color-start 0%, $gradient-color-mid 50%, $gradient-color-end 100%);
-    box-shadow: $btn-shadow;
-    content: "";
-  }
-
-  &:hover::before {
+  &:hover {
     background: $gradient-color-start;
   }
 }
